# reserch-decupling

./: .gitignore  README.md  all_run_sce18.sh  commands_with_logs.txt  main.py  pyproject.toml  requirements.txt  run.sh  save_commad.sh
doc/: 00-experiment_problem_setting.md  000-Template.md  001-Template-memo.md  01-scenario1_representation_probe.md  02-scenario2_raw_sales_forecast.md  03-scenario3_latent_demand_recovery.md  04-scenario4_two_stage_pipeline.md  05-scenario5_counterfactual_sanity.md  06-scenario6_local_global_ablation.md  07-scenario7_counterfactual_sanity_denormalized.md  08-scenario8_counterfactual_sanity_denormalized.md  08-scenario8_recovery_subset_diagnosis.md  09-scenario9_common_specific_feature_assignment.md  10-scenario10_stock_extension_for_local_branch.md  11-baseline_forecast_block.md  11-scenario11_latent_probe_plan.md  12-scenario12_input_assignment_role_swap_probe.md  13-scenario13_same_input_vs_role_split_probe.md  14-scenario14_common_specific_both_role_clarification.md  15-scenario15_common_branch_strengthening.md  16-scenario16_stock_common_vs_specific_placement.md  17-scenario17_horizon_role_gap.md  18-scenario18_prophet_input_structure_and_vae_common_specific_evaluation.md  19-scenario19_prophet_vae_horizon_extension.md  20-scenario20_role_clarification_deep_diagnosis.md  baseline.md  progress_26-04-13.md
src/: __init__.py  data.py  forecast_baselines.py  horizon_role_gap.py  metrics.py  models.py  plotting.py  scenario11_probe.py  scenario12_probe.py  scenario13_probe.py  scenario14_role_clarification.py  scenario15_pipeline.py  (+6 more)
(+62 files in other folders)
