[project]
name = "reserch-decupling"
version = "0.1.0"
description = "FreshRetailNet-50K decoupling-inspired scenario experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "datasets>=2.18.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
