[project]
name = "decoupling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "prophet>=1.3.0",
    "torch>=2.10.0",
]

[project.optional-dependencies]
forecast = [
    "prophet>=1.1.6",
]
