[project]
name = "decoupling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "prophet>=1.3.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
forecast = [
    "prophet>=1.1.6",
]
